# qsane

./: .gitignore  CMakeLists.txt  README.md
libs/qtpropertybrowser/src/: qteditorfactory.cpp  qtpropertybrowser.cpp  qtpropertymanager.cpp  qttreepropertybrowser.cpp  qtvariantproperty.cpp
libs/qtsanescanner/: LICENSE  README.md
libs/qtsanescanner/src/: qtsanescanner.cpp  qtsanescanner.h
share/applications/: qsane.desktop
src/: CropRect.cpp  CropRect.h  DevicePropertyBrowser.cpp  DevicePropertyBrowser.h  GraphicsImageItem.cpp  GraphicsImageItem.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  PageView.cpp  PageView.h  Scanner.cpp  Scanner.h  WorkerThread.cpp  WorkerThread.h  main.cpp  resources.qrc
translations/: lang_de.ts
